# 2025s-rustling-uuser-del

./: Cargo.toml
exercises/: quiz2.rs  quiz3.rs
exercises/algorithm/: algorithm2.rs  algorithm3.rs  algorithm4.rs
exercises/clippy/: clippy1.rs  clippy3.rs
exercises/enums/: enums1.rs  enums3.rs
exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
exercises/options/: options1.rs  options3.rs
exercises/structs/: structs1.rs  structs2.rs
