bin = [
  { name = "intro1", path = "exercises/intro/intro1.rs" },
  { name = "intro1_sol", path = "solutions/intro/intro1.rs" },
  { name = "intro2", path = "exercises/intro/intro2.rs" },
  { name = "intro2_sol", path = "solutions/intro/intro2.rs" },
  { name = "variables1", path = "exercises/variables/variables1.rs" },
  { name = "variables1_sol", path = "solutions/variables/variables1.rs" },
  { name = "variables2", path = "exercises/variables/variables2.rs" },
  { name = "variables2_sol", path = "solutions/variables/variables2.rs" },
  { name = "variables3", path = "exercises/variables/variables3.rs" },
  { name = "variables3_sol", path = "solutions/variables/variables3.rs" },
  { name = "variables4", path = "exercises/variables/variables4.rs" },
  { name = "variables4_sol", path = "solutions/variables/variables4.rs" },
  { name = "variables5", path = "exercises/variables/variables5.rs" },
  { name = "variables5_sol", path = "solutions/variables/variables5.rs" },
  { name = "variables6", path = "exercises/variables/variables6.rs" },
  { name = "variables6_sol", path = "solutions/variables/variables6.rs" },
  { name = "functions1", path = "exercises/functions/functions1.rs" },
  { name = "functions1_sol", path = "solutions/functions/functions1.rs" },
  { name = "functions2", path = "exercises/functions/functions2.rs" },
  { name = "functions2_sol", path = "solutions/functions/functions2.rs" },
  { name = "functions3", path = "exercises/functions/functions3.rs" },
  { name = "functions3_sol", path = "solutions/functions/functions3.rs" },
  { name = "functions4", path = "exercises/functions/functions4.rs" },
  { name = "functions4_sol", path = "solutions/functions/functions4.rs" },
  { name = "functions5", path = "exercises/functions/functions5.rs" },
  { name = "functions5_sol", path = "solutions/functions/functions5.rs" },
  { name = "if1", path = "exercises/if/if1.rs" },
  { name = "if1_sol", path = "solutions/if/if1.rs" },
  { name = "if2", path = "exercises/if/if2.rs" },
  { name = "if2_sol", path = "solutions/if/if2.rs" },
  { name = "if3", path = "exercises/if/if3.rs" },
  { name = "if3_sol", path = "solutions/if/if3.rs" },
  { name = "quiz1", path = "exercises/zzes/quiz1.rs" },
  { name = "quiz1_sol", path = "solutions/zzes/quiz1.rs" },
  { name = "primitive_types1", path = "exercises/primitive_types/primitive_types1.rs" },
  { name = "primitive_types1_sol", path = "solutions/primitive_types/primitive_types1.rs" },
  { name = "primitive_types2", path = "exercises/primitive_types/primitive_types2.rs" },
  { name = "primitive_types2_sol", path = "solutions/primitive_types/primitive_types2.rs" },
  { name = "primitive_types3", path = "exercises/primitive_types/primitive_types3.rs" },
  { name = "primitive_types3_sol", path = "solutions/primitive_types/primitive_types3.rs" },
  { name = "primitive_types4", path = "exercises/primitive_types/primitive_types4.rs" },
  { name = "primitive_types4_sol", path = "solutions/primitive_types/primitive_types4.rs" },
  { name = "primitive_types5", path = "exercises/primitive_types/primitive_types5.rs" },
  { name = "primitive_types5_sol", path = "solutions/primitive_types/primitive_types5.rs" },
  { name = "primitive_types6", path = "exercises/primitive_types/primitive_types6.rs" },
  { name = "primitive_types6_sol", path = "solutions/primitive_types/primitive_types6.rs" },
  { name = "vecs1", path = "exercises/vecs/vecs1.rs" },
  { name = "vecs1_sol", path = "solutions/vecs/vecs1.rs" },
  { name = "vecs2", path = "exercises/vecs/vecs2.rs" },
  { name = "vecs2_sol", path = "solutions/vecs/vecs2.rs" },
  { name = "move_semantics1", path = "exercises/move_semantics/move_semantics1.rs" },
  { name = "move_semantics1_sol", path = "solutions/move_semantics/move_semantics1.rs" },
  { name = "move_semantics2", path = "exercises/move_semantics/move_semantics2.rs" },
  { name = "move_semantics2_sol", path = "solutions/move_semantics/move_semantics2.rs" },
  { name = "move_semantics3", path = "exercises/move_semantics/move_semantics3.rs" },
  { name = "move_semantics3_sol", path = "solutions/move_semantics/move_semantics3.rs" },
  { name = "move_semantics4", path = "exercises/move_semantics/move_semantics4.rs" },
  { name = "move_semantics4_sol", path = "solutions/move_semantics/move_semantics4.rs" },
  { name = "move_semantics5", path = "exercises/move_semantics/move_semantics5.rs" },
  { name = "move_semantics5_sol", path = "solutions/move_semantics/move_semantics5.rs" },
  { name = "structs1", path = "exercises/structs/structs1.rs" },
  { name = "structs1_sol", path = "solutions/structs/structs1.rs" },
  { name = "structs2", path = "exercises/structs/structs2.rs" },
  { name = "structs2_sol", path = "solutions/structs/structs2.rs" },
  { name = "structs3", path = "exercises/structs/structs3.rs" },
  { name = "structs3_sol", path = "solutions/structs/structs3.rs" },
  { name = "enums1", path = "exercises/enums/enums1.rs" },
  { name = "enums1_sol", path = "solutions/enums/enums1.rs" },
  { name = "enums2", path = "exercises/enums/enums2.rs" },
  { name = "enums2_sol", path = "solutions/enums/enums2.rs" },
  { name = "enums3", path = "exercises/enums/enums3.rs" },
  { name = "enums3_sol", path = "solutions/enums/enums3.rs" },
  { name = "strings1", path = "exercises/strings/strings1.rs" },
  { name = "strings1_sol", path = "solutions/strings/strings1.rs" },
  { name = "strings2", path = "exercises/strings/strings2.rs" },
  { name = "strings2_sol", path = "solutions/strings/strings2.rs" },
  { name = "strings3", path = "exercises/strings/strings3.rs" },
  { name = "strings3_sol", path = "solutions/strings/strings3.rs" },
  { name = "strings4", path = "exercises/strings/strings4.rs" },
  { name = "strings4_sol", path = "solutions/strings/strings4.rs" },
  { name = "modules1", path = "exercises/modules/modules1.rs" },
  { name = "modules1_sol", path = "solutions/modules/modules1.rs" },
  { name = "modules2", path = "exercises/modules/modules2.rs" },
  { name = "modules2_sol", path = "solutions/modules/modules2.rs" },
  { name = "modules3", path = "exercises/modules/modules3.rs" },
  { name = "modules3_sol", path = "solutions/modules/modules3.rs" },
  { name = "hashmaps1", path = "exercises/hashmaps/hashmaps1.rs" },
  { name = "hashmaps1_sol", path = "solutions/hashmaps/hashmaps1.rs" },
  { name = "hashmaps2", path = "exercises/hashmaps/hashmaps2.rs" },
  { name = "hashmaps2_sol", path = "solutions/hashmaps/hashmaps2.rs" },
  { name = "hashmaps3", path = "exercises/hashmaps/hashmaps3.rs" },
  { name = "hashmaps3_sol", path = "solutions/hashmaps/hashmaps3.rs" },
  { name = "quiz2", path = "exercises/zzes/quiz2.rs" },
  { name = "quiz2_sol", path = "solutions/zzes/quiz2.rs" },
  { name = "options1", path = "exercises/options/options1.rs" },
  { name = "options1_sol", path = "solutions/options/options1.rs" },
  { name = "options2", path = "exercises/options/options2.rs" },
  { name = "options2_sol", path = "solutions/options/options2.rs" },
  { name = "options3", path = "exercises/options/options3.rs" },
  { name = "options3_sol", path = "solutions/options/options3.rs" },
  { name = "errors1", path = "exercises/error_handling/errors1.rs" },
  { name = "errors1_sol", path = "solutions/error_handling/errors1.rs" },
  { name = "errors2", path = "exercises/error_handling/errors2.rs" },
  { name = "errors2_sol", path = "solutions/error_handling/errors2.rs" },
  { name = "errors3", path = "exercises/error_handling/errors3.rs" },
  { name = "errors3_sol", path = "solutions/error_handling/errors3.rs" },
  { name = "errors4", path = "exercises/error_handling/errors4.rs" },
  { name = "errors4_sol", path = "solutions/error_handling/errors4.rs" },
  { name = "errors5", path = "exercises/error_handling/errors5.rs" },
  { name = "errors5_sol", path = "solutions/error_handling/errors5.rs" },
  { name = "errors6", path = "exercises/error_handling/errors6.rs" },
  { name = "errors6_sol", path = "solutions/error_handling/errors6.rs" },
  { name = "generics1", path = "exercises/generics/generics1.rs" },
  { name = "generics1_sol", path = "solutions/generics/generics1.rs" },
  { name = "generics2", path = "exercises/generics/generics2.rs" },
  { name = "generics2_sol", path = "solutions/generics/generics2.rs" },
  { name = "traits1", path = "exercises/traits/traits1.rs" },
  { name = "traits1_sol", path = "solutions/traits/traits1.rs" },
  { name = "traits2", path = "exercises/traits/traits2.rs" },
  { name = "traits2_sol", path = "solutions/traits/traits2.rs" },
  { name = "traits3", path = "exercises/traits/traits3.rs" },
  { name = "traits3_sol", path = "solutions/traits/traits3.rs" },
  { name = "traits4", path = "exercises/traits/traits4.rs" },
  { name = "traits4_sol", path = "solutions/traits/traits4.rs" },
  { name = "traits5", path = "exercises/traits/traits5.rs" },
  { name = "traits5_sol", path = "solutions/traits/traits5.rs" },
  { name = "quiz3", path = "exercises/zzes/quiz3.rs" },
  { name = "quiz3_sol", path = "solutions/zzes/quiz3.rs" },
  { name = "lifetimes1", path = "exercises/lifetimes/lifetimes1.rs" },
  { name = "lifetimes1_sol", path = "solutions/lifetimes/lifetimes1.rs" },
  { name = "lifetimes2", path = "exercises/lifetimes/lifetimes2.rs" },
  { name = "lifetimes2_sol", path = "solutions/lifetimes/lifetimes2.rs" },
  { name = "lifetimes3", path = "exercises/lifetimes/lifetimes3.rs" },
  { name = "lifetimes3_sol", path = "solutions/lifetimes/lifetimes3.rs" },
  { name = "tests1", path = "exercises/tests/tests1.rs" },
  { name = "tests1_sol", path = "solutions/tests/tests1.rs" },
  { name = "tests2", path = "exercises/tests/tests2.rs" },
  { name = "tests2_sol", path = "solutions/tests/tests2.rs" },
  { name = "tests3", path = "exercises/tests/tests3.rs" },
  { name = "tests3_sol", path = "solutions/tests/tests3.rs" },
  { name = "iterators1", path = "exercises/iterators/iterators1.rs" },
  { name = "iterators1_sol", path = "solutions/iterators/iterators1.rs" },
  { name = "iterators2", path = "exercises/iterators/iterators2.rs" },
  { name = "iterators2_sol", path = "solutions/iterators/iterators2.rs" },
  { name = "iterators3", path = "exercises/iterators/iterators3.rs" },
  { name = "iterators3_sol", path = "solutions/iterators/iterators3.rs" },
  { name = "iterators4", path = "exercises/iterators/iterators4.rs" },
  { name = "iterators4_sol", path = "solutions/iterators/iterators4.rs" },
  { name = "iterators5", path = "exercises/iterators/iterators5.rs" },
  { name = "iterators5_sol", path = "solutions/iterators/iterators5.rs" },
  { name = "box1", path = "exercises/smart_pointers/box1.rs" },
  { name = "box1_sol", path = "solutions/smart_pointers/box1.rs" },
  { name = "rc1", path = "exercises/smart_pointers/rc1.rs" },
  { name = "rc1_sol", path = "solutions/smart_pointers/rc1.rs" },
  { name = "arc1", path = "exercises/smart_pointers/arc1.rs" },
  { name = "arc1_sol", path = "solutions/smart_pointers/arc1.rs" },
  { name = "cow1", path = "exercises/smart_pointers/cow1.rs" },
  { name = "cow1_sol", path = "solutions/smart_pointers/cow1.rs" },
  { name = "threads1", path = "exercises/threads/threads1.rs" },
  { name = "threads1_sol", path = "solutions/threads/threads1.rs" },
  { name = "threads2", path = "exercises/threads/threads2.rs" },
  { name = "threads2_sol", path = "solutions/threads/threads2.rs" },
  { name = "threads3", path = "exercises/threads/threads3.rs" },
  { name = "threads3_sol", path = "solutions/threads/threads3.rs" },
  { name = "macros1", path = "exercises/macros/macros1.rs" },
  { name = "macros1_sol", path = "solutions/macros/macros1.rs" },
  { name = "macros2", path = "exercises/macros/macros2.rs" },
  { name = "macros2_sol", path = "solutions/macros/macros2.rs" },
  { name = "macros3", path = "exercises/macros/macros3.rs" },
  { name = "macros3_sol", path = "solutions/macros/macros3.rs" },
  { name = "macros4", path = "exercises/macros/macros4.rs" },
  { name = "macros4_sol", path = "solutions/macros/macros4.rs" },
  { name = "clippy1", path = "exercises/clippy/clippy1.rs" },
  { name = "clippy1_sol", path = "solutions/clippy/clippy1.rs" },
  { name = "clippy2", path = "exercises/clippy/clippy2.rs" },
  { name = "clippy2_sol", path = "solutions/clippy/clippy2.rs" },
  { name = "clippy3", path = "exercises/clippy/clippy3.rs" },
  { name = "clippy3_sol", path = "solutions/clippy/clippy3.rs" },
  { name = "using_as", path = "exercises/conversions/using_as.rs" },
  { name = "using_as_sol", path = "solutions/conversions/using_as.rs" },
  { name = "from_into", path = "exercises/conversions/from_into.rs" },
  { name = "from_into_sol", path = "solutions/conversions/from_into.rs" },
  { name = "from_str", path = "exercises/conversions/from_str.rs" },
  { name = "from_str_sol", path = "solutions/conversions/from_str.rs" },
  { name = "try_from_into", path = "exercises/conversions/try_from_into.rs" },
  { name = "try_from_into_sol", path = "solutions/conversions/try_from_into.rs" },
  { name = "as_ref_mut", path = "exercises/conversions/as_ref_mut.rs" },
  { name = "as_ref_mut_sol", path = "solutions/conversions/as_ref_mut.rs" },
]
[package]
name = "rustlings"
description = "Small exercises to get you used to reading and writing Rust code!"
version = "5.5.1"
authors = [
  "Liv <mokou@fastmail.com>",
  "Carol (Nichols || Goulding) <carol.nichols@gmail.com>",
]
edition = "2021"

[dependencies]
argh = "0.1"
indicatif = "0.16"
console = "0.15"
notify = "4.0"
toml = "0.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
home = "0.5.3"
glob = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }

#[[bin]]
#name = "rustlings"
#path = "src/main.rs"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.1"
glob = "0.3.0"
